force-app/main/default/objects/FS_IP_Equipment_Package__c/FS_IP_Equipment_Package__c.object-meta.xml
<CustomObject>
    <label>Equipment Package</label>
    <nameField>
        <displayFormat>IP_EQP-{0000}</displayFormat>
        <label>Equipment Package Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Equipment Packages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>