force-app/main/default/objects/FS_IP_Equipment_Package__c/fields/FS_Boost_Installation_Kit_M_Series_QTY__c.field-meta.xml
<CustomField>
    <fullName>FS_Boost_Installation_Kit_M_Series_QTY__c</fullName>
    <label>Boost Installation Kit (M-Series) QTY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>