force-app/main/default/objects/FS_IP_Equipment_Package__c/fields/FS_Boost_NNS_Tray_M_Series__c.field-meta.xml
<CustomField>
    <fullName>FS_Boost_NNS_Tray_M_Series__c</fullName>
    <label>Boost NNS Tray (M-Series)</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>FS_Platform_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>XXXXX: M- Series NNS Tray Kit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>