force-app/main/default/objects/FS_IP_Equipment_Package__c/fields/FS_Coke_Pump__c.field-meta.xml
<CustomField>
    <fullName>FS_Coke_Pump__c</fullName>
    <label>Coke Pump</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>FS_Platform_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>XXXXX: Electric Bulk Coke pump Kit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>