force-app/main/default/objects/FS_IP_Equipment_Package__c/fields/FS_CustomLastModifiedBy__c.field-meta.xml
<CustomField>
    <fullName>FS_CustomLastModifiedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FS CustomLastModifiedBy</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Equipment_Packages1</relationshipName>
    <type>Lookup</type>
</CustomField>