force-app/main/default/objects/FS_IP_Equipment_Package__c/fields/FS_Dispenser_Series_IC_code__c.field-meta.xml
<CustomField>
    <fullName>FS_Dispenser_Series_IC_code__c</fullName>
    <label>Dispenser Series IC Code</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>FS_Platform_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>46401: Standard Splashplate with Driptray, Cuprest and optional leg kit</fullName>
            </value>
            <value>
                <fullName>46403: SUBWAY Standard Splashplate with Driptray, Cuprest and optional leg kit</fullName>
            </value>
            <value>
                <fullName>46102: Freestyle GS2 Crew Serve</fullName>
            </value>
            <value>
                <fullName>46100 : Freestyle GS1 Red</fullName>
            </value>
            <value>
                <fullName>46101 : Freestyle GS1 Black</fullName>
            </value>
            <value>
                <fullName>46099 : Freestyle GS1 Silver</fullName>
            </value>
            <value>
                <fullName>46130 : Freestyle GS1 Red - Cruise Ship</fullName>
            </value>
            <value>
                <fullName>46294 : Freestyle GS1 Silver - Cruise Ship</fullName>
            </value>
            <value>
                <fullName>46667 : FS9100 Red</fullName>
            </value>
            <value>
                <fullName>46668 : FS9100 Black</fullName>
            </value>
            <value>
                <fullName>46669 : FS9100 Gray</fullName>
            </value>
            <value>
                <fullName>46708R : BRIDGE GS1 Red</fullName>
            </value>
            <value>
                <fullName>46709R : BRIDGE GS1 Silver</fullName>
            </value>
            <value>
                <fullName>46710R : BRIDGE GS1 Black</fullName>
            </value>
            <value>
                <fullName>46731 : FS9100 Dark Gray</fullName>
            </value>
            <value>
                <fullName>XXXXX: Freestyle 6000 McDonalds  M-series</fullName>
            </value>
            <value>
                <fullName>46749: 7100 Red Standard Splashplate with Driptray, Cuprest and optional legs</fullName>
            </value>
            <value>
                <fullName>XXXXX: 7100 Black Standard Splashplate with Driptray, Cuprest and optional legs</fullName>
            </value>
            <value>
                <fullName>45904 : FSIB_Silver(No longer available as of MAR 2012)</fullName>
                <isActive>false</isActive>
                <label>45904 : FSIB_Silver(No longer available as of MAR 2012)</label>
            </value>
            <value>
                <fullName>45906 : FSIB_Red(No longer available as of MAR 2012)</fullName>
                <isActive>false</isActive>
                <label>45906 : FSIB_Red(No longer available as of MAR 2012)</label>
            </value>
            <value>
                <fullName>45908 : FSIB_Black(No longer available as of MAR 2012)</fullName>
                <isActive>false</isActive>
                <label>45908 : FSIB_Black(No longer available as of MAR 2012)</label>
            </value>
            <value>
                <fullName>46048 : CCFS Crew Serve 1 Nozzle(No longer available as of MAR 2012)</fullName>
                <isActive>false</isActive>
                <label>46048 : CCFS Crew Serve 1 Nozzle(No longer available as of MAR 2012)</label>
            </value>
            <value>
                <fullName>46099 Freestyle GS1 Silver</fullName>
                <isActive>false</isActive>
                <label>46099 Freestyle GS1 Silver</label>
            </value>
            <value>
                <fullName>46099: Freestyle GS1 Silver</fullName>
                <isActive>false</isActive>
                <label>46099: Freestyle GS1 Silver</label>
            </value>
            <value>
                <fullName>46100 Freestyle GS1 Red</fullName>
                <isActive>false</isActive>
                <label>46100 Freestyle GS1 Red</label>
            </value>
            <value>
                <fullName>46100: Freestyle GS1 Red</fullName>
                <isActive>false</isActive>
                <label>46100: Freestyle GS1 Red</label>
            </value>
            <value>
                <fullName>46101 Freestyle GS1 Black</fullName>
                <isActive>false</isActive>
                <label>46101 Freestyle GS1 Black</label>
            </value>
            <value>
                <fullName>46101: Freestyle GS1 Black</fullName>
                <isActive>false</isActive>
                <label>46101: Freestyle GS1 Black</label>
            </value>
            <value>
                <fullName>46102 : Freestyle GS2 Crew Serve</fullName>
                <isActive>false</isActive>
                <label>46102 : Freestyle GS2 Crew Serve</label>
            </value>
            <value>
                <fullName>46102 : Freestyle GS2 Ã‚Â Crew Serve</fullName>
                <isActive>false</isActive>
                <label>46102 : Freestyle GS2 Ã‚Â Crew Serve</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>