force-app/main/default/objects/FS_IP_Equipment_Package__c/fields/FS_EP_Equipment_Package__c.field-meta.xml
<CustomField>
    <fullName>FS_EP_Equipment_Package__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Equipment Package</label>
    <referenceTo>FS_EP_Equipment_Package__c</referenceTo>
    <relationshipLabel>Equipment Packages</relationshipLabel>
    <relationshipName>Equipment_Packages</relationshipName>
    <type>Lookup</type>
</CustomField>