force-app/main/default/objects/FS_IP_Equipment_Package__c/fields/FS_Ice_Maker_Cladding__c.field-meta.xml
<CustomField>
    <fullName>FS_Ice_Maker_Cladding__c</fullName>
    <label>Ice Maker Cladding</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>FS_Platform_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>XXXXX: Ice Maker Cladding Kit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>