force-app/main/default/objects/FS_IP_Equipment_Package__c/fields/FS_Installation__c.field-meta.xml
<CustomField>
    <fullName>FS_Installation__c</fullName>
    <label>Installation</label>
    <referenceTo>FS_Installation__c</referenceTo>
    <relationshipLabel>Equipment Packages</relationshipLabel>
    <relationshipName>Equipment_Packages</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>