force-app/main/default/objects/FS_IP_Equipment_Package__c/fields/FS_Installation_Before_FET_4_0__c.field-meta.xml
<CustomField>
    <fullName>FS_Installation_Before_FET_4_0__c</fullName>
    <label>Installation Before FET 4.0</label>
    <length>80</length>
    <type>Text</type>
</CustomField>