force-app/main/default/objects/FS_IP_Equipment_Package__c/fields/FS_Installation_update_date_Time__c.field-meta.xml
<CustomField>
    <fullName>FS_Installation_update_date_Time__c</fullName>
    <label>Installation update date/Time</label>
    <type>DateTime</type>
</CustomField>