force-app/main/default/objects/FS_IP_Equipment_Package__c/fields/FS_Label_kits__c.field-meta.xml
<CustomField>
    <fullName>FS_Label_kits__c</fullName>
    <label>Label Kits</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>FS_Platform_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>141958: Barqs/Dr. Pepper label kit</fullName>
            </value>
            <value>
                <fullName>XXXXX: Barqs/Pibb label kit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>