force-app/main/default/objects/FS_IP_Equipment_Package__c/fields/FS_Legacy_Equip_during_install__c.field-meta.xml
<CustomField>
    <fullName>FS_Legacy_Equip_during_install__c</fullName>
    <label>Legacy Equip during install</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>