force-app/main/default/objects/FS_IP_Equipment_Package__c/fields/FS_LID_IM_Adapter1__c.field-meta.xml
<CustomField>
    <fullName>FS_LID_IM_Adapter1__c</fullName>
    <label>LID/IM Adapter 1</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>FS_Platform_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>46412: Ice Maker Adapter Kit</fullName>
            </value>
            <value>
                <fullName>46413: Lid</fullName>
            </value>
            <value>
                <fullName>46000 : FSIB Red Lid</fullName>
            </value>
            <value>
                <fullName>46001 : FSIB Silver Lid</fullName>
            </value>
            <value>
                <fullName>46002 : FSIB Black Lid</fullName>
            </value>
            <value>
                <fullName>46004 : Hoshizaki Door, Silver Shrouds</fullName>
            </value>
            <value>
                <fullName>46005 : Hoshizaki Door, Red Shrouds</fullName>
            </value>
            <value>
                <fullName>46006 : Hoshizaki Door, Black Shrouds</fullName>
            </value>
            <value>
                <fullName>46007 : Scotsman E686 Door, Silver Shrouds</fullName>
            </value>
            <value>
                <fullName>46008 : Scotsman E686 Door, Red Shrouds</fullName>
            </value>
            <value>
                <fullName>46009 : Scotsman E686 Door, Black Shrouds</fullName>
            </value>
            <value>
                <fullName>46010 : Scotsman 306/456/954 Door, Silver Shrouds</fullName>
            </value>
            <value>
                <fullName>46011 : Scotsman 306/456/954 Door, Red Shrouds</fullName>
            </value>
            <value>
                <fullName>46012 : Scotsman 306/456/954 Door, Black Shrouds</fullName>
            </value>
            <value>
                <fullName>46013 : Manitowoc S422 S322 Door, Silver Shrouds</fullName>
            </value>
            <value>
                <fullName>46014 : Manitowoc S422 S322 Door, Red Shrouds</fullName>
            </value>
            <value>
                <fullName>46015 : Manitowoc S422 S322 Door, Black Shrouds</fullName>
            </value>
            <value>
                <fullName>46016 : Mani- IB600C IB800C IB1000C Door, Silver Shrouds</fullName>
            </value>
            <value>
                <fullName>46017 : Mani- IB600C IB800C IB1000C Door, Red Shrouds</fullName>
            </value>
            <value>
                <fullName>46018 : Mani- IB600C IB800C IB1000C Door, Black Shrouds</fullName>
            </value>
            <value>
                <fullName>46032 : Ice-O-Matic 520 Door, Silver Shrouds</fullName>
            </value>
            <value>
                <fullName>46033 : Ice-O-Matic 520 Door, Red Shrouds</fullName>
            </value>
            <value>
                <fullName>46034 : Ice-O-Matic 520 Door, Black Shrouds</fullName>
            </value>
            <value>
                <fullName>46371 : 30&quot; Hoshizaki KMD 850/901</fullName>
            </value>
            <value>
                <fullName>46372 : 30&quot; Manitowoc 450/500/606/800/906</fullName>
            </value>
            <value>
                <fullName>46375 : 30â€� IK ICE O 30â€� 250/406/1006</fullName>
            </value>
            <value>
                <fullName>46382 : KIT IM ADPT SCOTTS 30&quot; C0830/C1030</fullName>
            </value>
            <value>
                <fullName>46419: IK MAN 30&quot; DUAL EVAP</fullName>
            </value>
            <value>
                <fullName>46465 : KIT IM ADPT HOSHIZAKI KMS-1122 SLVR</fullName>
            </value>
            <value>
                <fullName>46466 : KIT IM ADPT HOSHIZAKI KMS-1122 RED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>