force-app/main/default/objects/FS_IP_Equipment_Package__c/fields/FS_LID_IM_Adapter1_QTY__c.field-meta.xml
<CustomField>
    <fullName>FS_LID_IM_Adapter1_QTY__c</fullName>
    <label>LID/IM Adapter 1 QTY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>