force-app/main/default/objects/FS_IP_Equipment_Package__c/fields/FS_Misc_Kit_M_Series__c.field-meta.xml
<CustomField>
    <fullName>FS_Misc_Kit_M_Series__c</fullName>
    <label>Misc Kit (M-Series)</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>FS_Platform_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>XXXX: M-Series Installation Kit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>