force-app/main/default/objects/FS_IP_Equipment_Package__c/fields/FS_Notification_for_Hawaii_Install_fla__c.field-meta.xml
<CustomField>
    <fullName>FS_Notification_for_Hawaii_Install_fla__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notification for Hawaii Install fla</label>
    <type>Checkbox</type>
</CustomField>