force-app/main/default/objects/FS_IP_Equipment_Package__c/fields/FS_Onboarding_Readiness__c.field-meta.xml
<CustomField>
    <fullName>FS_Onboarding_Readiness__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Onboarding Readiness</label>
    <type>Checkbox</type>
</CustomField>