force-app/main/default/objects/FS_IP_Equipment_Package__c/fields/FS_Original_8k9k_Euipment_Package__c.field-meta.xml
<CustomField>
    <fullName>FS_Original_8k9k_Euipment_Package__c</fullName>
    <description>Original 8k9k Euipment Package field used for data migration</description>
    <label>Original 8k9k Euipment Package</label>
    <length>80</length>
    <type>Text</type>
</CustomField>