force-app/main/default/objects/FS_IP_Equipment_Package__c/fields/FS_PIC_Reschedule_Dt1__c.field-meta.xml
<CustomField>
    <fullName>FS_PIC_Reschedule_Dt1__c</fullName>
    <formula>FS_Installation__r.Name</formula>
    <label>PIC Reschedule Date 1</label>
    <type>Text</type>
</CustomField>