force-app/main/default/objects/FS_IP_Equipment_Package__c/fields/FS_Planned_Topmount_Icemakers__c.field-meta.xml
<CustomField>
    <fullName>FS_Planned_Topmount_Icemakers__c</fullName>
    <label># Planned Top Mount Ice Makers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>