force-app/main/default/objects/FS_IP_Equipment_Package__c/fields/FS_Rack3__c.field-meta.xml
<CustomField>
    <fullName>FS_Rack3__c</fullName>
    <label>Rack 3</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>FS_Platform_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>46110 : 38&quot; Rack with Cartridge Storage for 4Gal WB</fullName>
            </value>
            <value>
                <fullName>46111 : 38&quot; Rack with Cartridge Storage for 20Gal WB</fullName>
            </value>
            <value>
                <fullName>46079: 28&quot; Cartridge/HFCS Inclined/Flat</fullName>
            </value>
            <value>
                <fullName>46246: 41â€� Rack with 2 Flat Pans</fullName>
            </value>
            <value>
                <fullName>46280 : 41â€� Manitowoc (Wendy&#39;s Only)</fullName>
            </value>
            <value>
                <fullName>46312: 4&quot; Chase SS</fullName>
            </value>
            <value>
                <fullName>46747: 15â€� Wide under counter rack w/1 slanted shelf</fullName>
            </value>
            <value>
                <fullName>46748: 28â€� Wide under counter rack w/1 slanted shelf</fullName>
            </value>
            <value>
                <fullName>44236: 15â€� Wide Single BIB Rack under counter</fullName>
            </value>
            <value>
                <fullName>44238: 28â€� Wide Double BIB Rack under counter</fullName>
            </value>
            <value>
                <fullName>45897 : 15&quot; Wide Inclined Five Shelves</fullName>
            </value>
            <value>
                <fullName>45898: 28&quot; Wide Inclined Five Shelves</fullName>
            </value>
            <value>
                <fullName>45899: 41&quot; Wide Inclined Five Shelves</fullName>
            </value>
            <value>
                <fullName>XXXXX: Chase Stainless Steel Kit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>