force-app/main/default/objects/FS_IP_Equipment_Package__c/fields/FS_Regulator__c.field-meta.xml
<CustomField>
    <fullName>FS_Regulator__c</fullName>
    <label>Regulator</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>45819 : CO2 Regulator</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>