force-app/main/default/objects/FS_IP_Equipment_Package__c/fields/FS_Related_Technician_Instructions__c.field-meta.xml
<CustomField>
    <fullName>FS_Related_Technician_Instructions__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Technician Instructions</label>
    <referenceTo>FS_IP_Technician_Instructions__c</referenceTo>
    <relationshipLabel>Equipment Package</relationshipLabel>
    <relationshipName>Equipment_Packages2</relationshipName>
    <type>Lookup</type>
</CustomField>