force-app/main/default/objects/FS_IP_Equipment_Package__c/fields/FS_Shelf2__c.field-meta.xml
<CustomField>
    <fullName>FS_Shelf2__c</fullName>
    <label>Shelf 2</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>46065 : Slant Shelf 15inch Wide</fullName>
            </value>
            <value>
                <fullName>46063 : Slant Shelf 28inch Wide</fullName>
            </value>
            <value>
                <fullName>46064 : Slant Shelf 41inch Wide</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>