force-app/main/default/objects/FS_IP_Equipment_Package__c/fields/FS_Shelf2_QTY__c.field-meta.xml
<CustomField>
    <fullName>FS_Shelf2_QTY__c</fullName>
    <label>Shelf 2 QTY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>