force-app/main/default/objects/FS_IP_Equipment_Package__c/fields/FS_Soft_Ice_Misc_Adapter__c.field-meta.xml
<CustomField>
    <fullName>FS_Soft_Ice_Misc_Adapter__c</fullName>
    <label>Soft Ice / Misc Adapter</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>FS_Platform_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>46303 Hoshizaki Funnel Kit for Models: KM-280, -320, -500, -501, -515, -630M, -650M &amp; -600MAH</fullName>
            </value>
            <value>
                <fullName>46377 : Hoshizaki Funnel Kit</fullName>
            </value>
            <value>
                <fullName>46468: IM FUNNEL ADAPTER KIT HS-5201</fullName>
            </value>
            <value>
                <fullName>46487: HOSH KM-650 SUPPLEMENTAL KIT</fullName>
            </value>
            <value>
                <fullName>46430: KIT FREESTYLE 7000 SOFT ICE</fullName>
            </value>
            <value>
                <fullName>46712: KIT FREESTYLE 7000 SOFT ICE</fullName>
            </value>
            <value>
                <fullName>XXXXX: For Future Use</fullName>
            </value>
            <value>
                <fullName>XXXXX: Kit Freestyle 7100 Soft Ice</fullName>
            </value>
            <value>
                <fullName>46728: Kit Freestyle 9100 Soft Ice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>