force-app/main/default/objects/FS_IP_Equipment_Package__c/fields/FS_Stand__c.field-meta.xml
<CustomField>
    <fullName>FS_Stand__c</fullName>
    <label>Stand</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>FS_Platform_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>46449: FS7000 Stand (Customer Pay)</fullName>
            </value>
            <value>
                <fullName>46449: FS7000 Stand (Account Pay)</fullName>
            </value>
            <value>
                <fullName>46449: FS7000 Stand</fullName>
            </value>
            <value>
                <fullName>46449: 7000/7100 Stand (Customer Pay)</fullName>
            </value>
            <value>
                <fullName>46449: 7000/7100 Stand (Account Pay)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>